// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gameReducer AttackAction computes the new state correctly 1`] = `
{
  "attacksMap": {
    "00": false,
  },
  "board": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "hasGameEnded": false,
  "hasGameStarted": false,
  "isDebug": false,
  "log": [
    {
      "event": {
        "type": "Miss",
        "x": 0,
        "y": 0,
      },
      "ts": 1716508800000,
    },
  ],
  "score": {
    "current": 0,
    "win": 13,
  },
  "shipsMap": {
    "1": {
      "hits": 0,
      "id": 1,
      "name": "Battleship",
      "size": 5,
    },
    "2": {
      "hits": 0,
      "id": 2,
      "name": "Destroyer",
      "size": 4,
    },
    "3": {
      "hits": 0,
      "id": 3,
      "name": "Destroyer",
      "size": 4,
    },
  },
}
`;

exports[`gameReducer AttackAction runs the EndAction when the win condition is met 1`] = `
{
  "attacksMap": {
    "00": false,
  },
  "board": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "hasGameEnded": true,
  "hasGameStarted": false,
  "isDebug": false,
  "log": [
    {
      "event": {
        "type": "Miss",
        "x": 0,
        "y": 0,
      },
      "ts": 1716508800000,
    },
    {
      "event": {
        "stats": {
          "attacks": 1,
          "hitRatio": 0,
          "hits": 0,
          "misses": 1,
          "score": 13,
          "sunk": 0,
        },
        "type": "End",
      },
      "ts": 1716508800000,
    },
  ],
  "score": {
    "current": 13,
    "win": 13,
  },
  "shipsMap": {
    "1": {
      "hits": 0,
      "id": 1,
      "name": "Battleship",
      "size": 5,
    },
    "2": {
      "hits": 0,
      "id": 2,
      "name": "Destroyer",
      "size": 4,
    },
    "3": {
      "hits": 0,
      "id": 3,
      "name": "Destroyer",
      "size": 4,
    },
  },
}
`;

exports[`gameReducer EndAction computes the new state correctly 1`] = `
{
  "attacksMap": {},
  "board": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "hasGameEnded": true,
  "hasGameStarted": false,
  "isDebug": false,
  "log": [
    {
      "event": {
        "stats": {
          "attacks": 0,
          "hitRatio": 0,
          "hits": 0,
          "misses": 0,
          "score": 0,
          "sunk": 0,
        },
        "type": "End",
      },
      "ts": 1716508800000,
    },
  ],
  "score": {
    "current": 0,
    "win": 13,
  },
  "shipsMap": {
    "1": {
      "hits": 0,
      "id": 1,
      "name": "Battleship",
      "size": 5,
    },
    "2": {
      "hits": 0,
      "id": 2,
      "name": "Destroyer",
      "size": 4,
    },
    "3": {
      "hits": 0,
      "id": 3,
      "name": "Destroyer",
      "size": 4,
    },
  },
}
`;

exports[`gameReducer StartAction computes the new state correctly 1`] = `
{
  "attacksMap": {},
  "board": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      2,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      2,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      2,
      0,
      1,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      2,
      0,
      1,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
    ],
    [
      0,
      3,
      3,
      3,
      3,
      0,
      1,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "hasGameEnded": false,
  "hasGameStarted": true,
  "isDebug": false,
  "log": [
    {
      "event": {
        "type": "Start",
      },
      "ts": 1716508800000,
    },
  ],
  "score": {
    "current": 0,
    "win": 13,
  },
  "shipsMap": {
    "1": {
      "hits": 0,
      "id": 1,
      "name": "Battleship",
      "size": 5,
    },
    "2": {
      "hits": 0,
      "id": 2,
      "name": "Destroyer",
      "size": 4,
    },
    "3": {
      "hits": 0,
      "id": 3,
      "name": "Destroyer",
      "size": 4,
    },
  },
}
`;

exports[`gameReducer ToggleDebugAction computes the new state correctly 1`] = `
{
  "attacksMap": {},
  "board": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "hasGameEnded": false,
  "hasGameStarted": false,
  "isDebug": true,
  "log": [],
  "score": {
    "current": 0,
    "win": 13,
  },
  "shipsMap": {
    "1": {
      "hits": 0,
      "id": 1,
      "name": "Battleship",
      "size": 5,
    },
    "2": {
      "hits": 0,
      "id": 2,
      "name": "Destroyer",
      "size": 4,
    },
    "3": {
      "hits": 0,
      "id": 3,
      "name": "Destroyer",
      "size": 4,
    },
  },
}
`;

exports[`getInitialState returns the default initial state 1`] = `
{
  "attacksMap": {},
  "board": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "hasGameEnded": false,
  "hasGameStarted": false,
  "isDebug": false,
  "log": [],
  "score": {
    "current": 0,
    "win": 13,
  },
  "shipsMap": {
    "1": {
      "hits": 0,
      "id": 1,
      "name": "Battleship",
      "size": 5,
    },
    "2": {
      "hits": 0,
      "id": 2,
      "name": "Destroyer",
      "size": 4,
    },
    "3": {
      "hits": 0,
      "id": 3,
      "name": "Destroyer",
      "size": 4,
    },
  },
}
`;
